*** 20010704_8 by greg
Uh. Right ..

- config.h	
		made CRYPT_LINKS_PRIVATEKEYFILE deprecated, documented other
		cryptlinks related options
		prefer the me.name.key format. much cleaner.
- include/m_info.h
		show PRIVATEKEYFILE define as 'NONE' if no override
- src/s_crypt.c	
		made PRIVATEKEYFILE deprecated in favor of me.name

TODO:
- make ircd.pid stuff multi-ircd-in-one-dir friendly
- keys not 2048 bits long? more descriptive errors?
- more testing
- more testing
- rc to lightning/solidstreaming


*** 20010704_7 by db
- reformatted hard to read code. grrrr why do people do 
  function () { ?



*** 20010704_6 by wcampbel
Added make lint...that won't be very fun to clean up though


*** 20010704_5 by leeh
- we shouldnt limit things if it isnt our client.. :)


*** 20010704_4 by wcampbel
Updated .depend


*** 20010704_3 by jdc
- include/config.h
    * Forgot to add CRYPT_LINKS_CIPHERPREFIX to this file, not just
      config.h.dist.



*** 20010704_2 by jdc
- src/m_cryptlink.c
    * Woohoo!  Found the bug in question; old code was sending the old
      method (eg. "CRYPTLINK AUTH CAST/128/128") when it shouldn't have
      been printing keysize at all.  Now prints "CRYPTLINK AUTH CAST/128"
      like it should.  :-)



*** 20010704_1 by jdc
The Monster Update(tm) for hybrid-6 and cryptlinks.

NOTE:  This apparently should work with hybrid-7, but it has one minor
bug which I have yet to be able to figure out.  Other than that, the
actual authentication seems to be working fine; there's got to be a
missing line of code somewhere, or something not being initialised right;
something like that.  An example of this problem (pentarou.parodius.com
is hybrid-6 with this code):

*** Connecting to 255.255.255.255[hybrid.best.net].9000
*** Notice -- Link with hybrid.best.net[unknown@255.255.255.255] established: (TS ZIP QS EX CHW ENC:CAST/128,CAST/128) link
*** Notice -- inflate() error(-3): unknown compression method