@@ -1,3 +1,8 @@
+*** 20010705_1 by db
+- don't allow opers to join on split either.
+
+
+
 *** 20010704_8 by greg
 Uh. Right ..
 
